--- a/app/templates/auth/create_password.html
+++ b/app/templates/auth/create_password.html
@@ -58,7 +58,7 @@
 					{% endwith %}
 			<!-- start: LOGIN BOX -->
 			<!-- start: RESET PASSWORD BOX -->
-			<div class="box-register">
+			<div class="box-login">
 				<h3>Create Password</h3>
 				<p>
 					Create your password by inputting a password in the below form.
