Load board button updates

--- a/app/templates/auth/create_password.html
+++ b/app/templates/auth/create_password.html
@@ -52,14 +52,14 @@
 			
 			<!-- start: LOGIN BOX -->
 			<!-- start: RESET PASSWORD BOX -->
-			<div class="box-login">
+			<div class="box-register">
 				{% with messages = get_flashed_messages() %}
-					{% if messages %}
-				    	{% for message in messages %}
-				    		<div class="alert alert-warning" role="alert">{{ message }}</div>
-				    	{% endfor %}
-				  	{% endif %}
-				{% endwith %}
+						{% if messages %}
+					    	{% for message in messages %}
+					    		<div class="alert alert-warning" role="alert">{{ message }}</div>
+					    	{% endfor %}
+					  	{% endif %}
+					{% endwith %}
 				<h3>Create Password</h3>
 				<p>
 					Create your password by inputting a password in the below form.
