--- a/app/templates/partials/load_board.html
+++ b/app/templates/partials/load_board.html
@@ -29,27 +29,77 @@
                         {% endif %}
                     </td>
                     <td>{{ load.status }}</td>
-                    <td>
+                    <td class="center">
                         {% if load.created_by.id != g.user.company.id and load.status == "Pending Carrier Assignment" %}
                             <a href="{{ url_for('loads.create_bid', load_id=load.id) }}" class="btn btn-primary btn-mini ">Create Bid</a>
-                        {% else %}
-                            {% if g.user.company.is_carrier() %}
-                                {% if load.status == "Invoiced" %}
-                                    <a href="{{ url_for('loads.complete', load_id=load.id) }}" class="btn btn-primary btn-mini ">Complete</a>
-                                {% elif load.status == "Delivered" %}
-                                    <a href="{{ url_for('loads.invoice', load_id=load.id) }}" class="btn btn-primary btn-mini ">Invoiced</a>
-                                {% endif %}
-                                {% if load.getStatus != "Complete" and load.status != "Invoiced" %}
-                                    <a href="{{ url_for('loads.edit', load_id=load.id)}}" class="btn btn-primary btn-mini">Edit</a>
-                                
-                                    <a href="{{ url_for('loads.delete', load_id=load.id)}}" class="btn btn-danger btn-mini delete" onclick="return confirm('Are you sure you want to delete this?')">Delete</a>
-                                {% endif %}
-                            {% else %}
-                                {% if load.status == "Pending Carrier Assignment" %}
-                                    <a href="{{ url_for('loads.view_bids', load_id=load.id) }}" class="btn btn-primary btn-mini ">View Bids <span class="badge">{{ load.bids|count }}</span></a>
-                                {% endif %}
+                        {% elif not g.user.company.is_carrier() %}
+                            {% if load.status == "Pending Carrier Assignment" %}
+                                <a href="{{ url_for('loads.view_bids', load_id=load.id) }}" class="btn btn-primary btn-mini ">View Bids <span class="badge">{{ load.bids|count }}</span></a>
                             {% endif %}
+                        {% else %}
+                            <div class="btn-group">
+                                <a class="btn btn-primary dropdown-toggle btn-sm" data-toggle="dropdown" href="#">
+                                    <i class="fa fa-cog"></i> <span class="caret"></span>
+                                </a>
+                                <ul role="menu" class="dropdown-menu pull-right">
+                                    {% if g.user.company.is_carrier() %}
+                                        {% if load.status == "Invoiced" %}
+                                            <li role="presentation">
+                                                <a role="menuitem" tabindex="-1" href="{{ url_for('loads.complete', load_id=load.id) }}">
+                                                    <i class="fa fa-share"></i> Complete
+                                                </a>
+                                            </li>
+                                        {% elif load.status == "Delivered" %}
+                                            <li role="presentation">
+                                                <a role="menuitem" tabindex="-1" href="{{ url_for('loads.invoice', load_id=load.id) }}">
+                                                    <i class="fa fa-share"></i> Invoiced
+                                                </a>
+                                            </li>
+                                        {% endif %}
+                                        {% if load.getStatus != "Complete" and load.status != "Invoiced" %}
+                                            <li role="presentation">
+                                                <a role="menuitem" tabindex="-1" href="{{ url_for('loads.edit', load_id=load.id) }}">
+                                                    <i class="fa fa-share"></i> Invoiced
+                                                </a>
+                                            </li>
+
+                                            <li role="presentation">
+                                                <a role="menuitem" tabindex="-1" href="{{ url_for('loads.delete', load_id=load.id) }}" onclick="return confirm('Are you sure you want to delete this?')">
+                                                    <i class="fa fa-share"></i> Delete
+                                                </a>
+                                            </li>
+                                        {% endif %}
+                                    {% endif %}
+                                </ul>
                         {% endif %}
+                        <div class="btn-group">
+                            <a class="btn btn-primary dropdown-toggle btn-sm" data-toggle="dropdown" href="#">
+                                <i class="fa fa-cog"></i> <span class="caret"></span>
+                            </a>
+                            <ul role="menu" class="dropdown-menu pull-right">
+                                {#<li role="presentation">
+                                    <a role="menuitem" tabindex="-1" href="{{ url_for('.edit_user', user_id=user.id) }}">
+                                        <i class="fa fa-edit"></i> Edit
+                                    </a>
+                                </li>#}
+                                {% if not user.disabled %}
+                                    <li role="presentation">
+                                        <a role="menuitem" tabindex="-1" href="{{ url_for('.disable_user', user_id=user.id) }}">
+                                            <i class="fa fa-share"></i> Disable User
+                                        </a>
+                                    </li>
+                                {% else %}
+                                    <li role="presentation">
+                                        <a role="menuitem" tabindex="-1" href="{{ url_for('.enable_user', user_id=user.id) }}">
+                                            <i class="fa fa-share"></i> Activate User
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </div>
+                    </td>
+                    <td>
+                        
                     </td>
                 </tr>
             {% endfor %}
