--- a/app/templates/emails/accepted_bid.html
+++ b/app/templates/emails/accepted_bid.html
@@ -1,6 +1,6 @@
-<p>Dear {{ user.name }},</p>
+<p>Dear {{ user.first_name }} {{ user.last_name }},</p>
 
-<p>Your bid on load {{ load.id}} has been accepted. Please visit your load board to see the new load assignment</p>
+<p>Your bid on load {{ load.name }} has been accepted. Please visit your load board to see the new load assignment.</p>
 
 <p>Regards,</p>
 
