--- a/app/templates/auth/create_password.html
+++ b/app/templates/auth/create_password.html
@@ -52,7 +52,7 @@
 			
 			<!-- start: LOGIN BOX -->
 			<!-- start: RESET PASSWORD BOX -->
-			<div class="box-register">
+			<div class="box-login">
 				{% with messages = get_flashed_messages() %}
 						{% if messages %}
 					    	{% for message in messages %}
