--- a/app/templates/carrier/driver/edit.html
+++ b/app/templates/carrier/driver/edit.html
@@ -50,7 +50,7 @@
 					</div>
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
-							Email<span class="symbol required"></span> {{form.has_account.data }}
+							Email<span class="symbol required"></span>
 							{% for error in form.email.errors %}
 					            <br><span style="color: red;">{{ error }}</span>
 					          {% endfor %}
