--- a/app/templates/partials/page_header.html
+++ b/app/templates/partials/page_header.html
@@ -36,7 +36,7 @@
 														{% endif %}
 															{% if load.truck is not none %}
 																{% if load.truck.driver.driver_account is not none %}
-																	{% if load.truck.driver.driver_account.disabled == False %}
+																	{% if load.truck.driver.driver_account.disabled != True %}
 																		<a href="javascript:ping_driver({{ load.truck.driver.truck.id }});" class="new-modal btn btn-green">Ping Driver</a>
 																	{% else %}
 																		<span data-toggle="tooltip" data-placement="right" title="Activate driver account to ping driver">
