--- a/app/templates/partials/main_javascripts.html
+++ b/app/templates/partials/main_javascripts.html
@@ -46,6 +46,7 @@
 		{% if form is defined %}
 			FormElements.init();
 			$('.input-mask-phone').mask("(999) 999-9999");
+			TableData.init();
 		{% endif %}
 	});
 </script>
