--- a/app/templates/load/post.html
+++ b/app/templates/load/post.html
@@ -71,6 +71,21 @@
 								</div>
 								<div class="form-group">
 									<label class="col-sm-3 control-label">
+										Over Dimensional <span class="symbol required"></span>
+										{% for error in form.max_weight.errors %}
+								            <br><span style="color: red;">{{ error }}</span>
+								        {% endfor %}
+									</label>
+									<div class="col-sm-7">
+										<div class="checkbox">
+											<label>
+												{{ form.over_dimensional(class='grey') }}
+											</label>
+										</div>
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-sm-3 control-label">
 										Max Length <span class="symbol required"></span>
 										{% for error in form.max_length.errors %}
 								            <br><span style="color: red;">{{ error }}</span>
